defination 마지막 문단 내용 추가

--- a/1.html
+++ b/1.html
@@ -15,5 +15,6 @@
     <h3>defination</h3>
     <img src="aspirin.jpg" width="100%">
     <a href="https://en.wikipedia.org/wiki/Aspirin" target="_blank" title="Aspirin wikipedia">Aspirin</a> is also used long-term to help prevent further heart attacks, ischaemic strokes, and blood clots in people at high risk.For pain or fever, effects typically begin within 30 minutes. <br>Aspirin works similarly to other NSAIDs but also suppresses the normal functioning of platelets.
+    so it is forbbiden to use Aspirin before surgery
 </body>
 </html>
