동영상 추가

--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
         <li><a href="3.html" target="_blank">precursor</a></li>
     </ol>
     
-    <h3>Aspirin이란 무엇인가?</h3>
+    <h3>Aspirin이란 무엇인가? 정말로 바로 변경 가능?</h3>
     <img src="aspirin.jpg" width="100%">
     <a href="https://en.wikipedia.org/wiki/Aspirin" target="_blank" title="Aspirin wikipedia">Aspirin</a> is also used long-term to help prevent further heart attacks, ischaemic strokes, and blood clots in people at high risk.For pain or fever, effects typically begin within 30 minutes. <br>Aspirin works similarly to other NSAIDs but also suppresses the normal functioning of platelets.
     <p style="margin-top:40px;"><strong>One common adverse effect is an <u>upset stomach</strong>.</u>
     More significant side effects include stomach ulcers, stomach bleeding, and worsening asthma.[9] <br>Bleeding risk is greater among those who are older, drink alcohol, take other NSAIDs, or are on other blood thinners.[9] <br>Aspirin is not recommended in the last part of pregnancy.[9] It is not generally recommended in children with infections because of the risk of Reye syndrome.[9] High doses may result in ringing in the ears.
     </p>
+    <p>
+        <iframe width="700" height="438" src="https://www.youtube.com/embed/WOWLsHldqwM" title="How does aspirin work?" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </p>
+    
 </body>
 </html>
